samples/_failures_safe/1761433639_a9e7bb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d4f7bf6b.c: In function ‘main’:
./samples/SAFE/__tmp_d4f7bf6b.c:147:16: error: missing terminating " character
  147 |         printf("Cannot multiply matrices: dimension mismatch or memory error\n
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d4f7bf6b.c:147:9: error: expected expression at end of input
  147 |         printf("Cannot multiply matrices: dimension mismatch or memory error\n
      |         ^~~~~~
./samples/SAFE/__tmp_d4f7bf6b.c:147:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d4f7bf6b.c:147:9: error: expected declaration or statement at end of input
